TestSuite/errors/err0535.pas
//!Имя библиотеки не может быть пустым
procedure p1; external '';
  
begin
  
end.